unpackaged/main/default/objects/Room__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>