unpackaged/main/default/objects/Room__c/fields/Maximum_Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Seats__c</fullName>
    <label>Maximum Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>